--- a/src/components/employees/Employees.css
+++ b/src/components/employees/Employees.css
@@ -13,3 +13,14 @@
     margin: 0.5rem;
 
 }
+
+.employee_footer {
+    margin: 1rem 0 0.25rem 0;
+    font-style: oblique;
+}
+
+.employee_header {
+    font-size: larger;
+    font-weight: 700;
+    line-height: 3rem;
+}
